<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/_16dp"
    android:layout_marginEnd="@dimen/_16dp"
    tools:context=".HotelListActivity">

    <TextView
        android:id="@+id/tv_title_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/popular"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="@dimen/_30dp"
        android:layout_height="@dimen/_30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_24dp"
        android:src="@drawable/ic_home_black_24dp" />

    <HorizontalScrollView
        android:id="@+id/hs_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title_popular"
        android:layout_marginTop="@dimen/_20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_category_jkt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_jkt"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16dp" />

            <TextView
                android:id="@+id/tv_category_palembang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_kostarika"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16dp" />

            <TextView
                android:id="@+id/tv_category_lampung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_beijing"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16dp" />

            <TextView
                android:id="@+id/tv_category_kalimantan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_bangkok"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16dp" />

            <TextView
                android:id="@+id/tv_category_surabaya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_yunani"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16dp" />

            <TextView
                android:id="@+id/tv_category_makasar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_bahama"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16dp" />

            <TextView
                android:id="@+id/tv_category_bandung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_india"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16dp" />

            <TextView
                android:id="@+id/tv_category_malang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/_4dp"
                android:text="@string/lable_category_china"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16dp" />

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_all_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hs_category"
        android:layout_marginTop="@dimen/_24dp"/>

</RelativeLayout>