<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8dp"
    app:cardCornerRadius="@dimen/_16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fm_staggered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/top_background">

                <ImageView
                    android:id="@+id/iv_staggered_hotel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/hotel2"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_staggered_name_hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_marginEnd="@dimen/_4dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/lable_name"
                android:padding="@dimen/_5dp"
                android:textSize="18sp" />
        </FrameLayout>


        <TextView
            android:id="@+id/tv_staggered_address_hotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lable_name_address"
            android:layout_marginStart="@dimen/_13dp"
            android:layout_below="@id/fm_staggered"
            android:layout_marginTop="@dimen/_10dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_staggered_address2_hotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lable_name_address"
            android:layout_below="@id/tv_staggered_address_hotel"
            android:layout_marginStart="@dimen/_13dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_staggered_desc_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lable_name_desc"
            android:layout_marginStart="@dimen/_13dp"
            android:layout_marginTop="@dimen/_10dp"
            android:maxLines="2"
            android:textColor="@android:color/black"
            android:layout_below="@id/tv_staggered_address2_hotel"
            android:textStyle="bold"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_staggered_desc2_hotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lable_name_desc"
            android:layout_marginStart="@dimen/_13dp"
            android:layout_below="@id/tv_staggered_desc_food"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="16sp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="3.5"
            android:numStars="5"
            android:layout_marginStart="@dimen/_13dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:layout_marginTop="@dimen/_10dp"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_below="@id/tv_staggered_desc2_hotel"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_staggered_address_hotel"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_16dp"
            app:backgroundTint="@android:color/holo_blue_dark"
            android:layout_marginBottom="@dimen/_16dp"
            app:fabSize="mini"
            app:layout_anchor="@id/fm_staggered"
            app:srcCompat="@drawable/ic_favorite_border_black_24dp"/>

    </RelativeLayout>



</androidx.cardview.widget.CardView>